# UECustomNet

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Depends/slikenet-0.1.3/: CMakeLists.txt
ExampleProject/: ExampleProject.uproject
ExampleProject/Config/: DefaultEngine.ini  DefaultGame.ini
ExampleProject/Content/Assets/Manny/Animations/: BS_MM_WalkRun.uasset  MM_Fall_Loop.uasset  MM_Idle.uasset  MM_Jump.uasset  MM_Land.uasset  MM_Run_Fwd.uasset  MM_T_Pose.uasset  MM_Walk_Fwd.uasset  MM_Walk_InPlace.uasset
ExampleProject/Content/Assets/Manny/Materials/: M_Mannequin.uasset
ExampleProject/Content/Assets/Manny/Meshes/: SKM_Manny.uasset  SK_Mannequin.uasset
ExampleProject/Content/Assets/Manny/Rigs/: CR_Mannequin_BasicFootIK.uasset  CR_Mannequin_Body.uasset  CR_Mannequin_Procedural.uasset  PA_Mannequin.uasset
ExampleProject/Content/Assets/Manny/Textures/: T_Manny_01_ASAOPMASK_MSK.uasset  T_Manny_01_BN.uasset  T_Manny_01_CCRCCPlastic_MSK.uasset  T_Manny_01_D.uasset  T_Manny_01_MSR_MSK.uasset  T_Manny_01_N.uasset  T_Manny_02_BN.uasset  (+8 more)
ExampleProject/Content/Gameplay/Character/: ABP_CNManny.uasset
ExampleProject/Content/Input/: IMC_Default.uasset
ExampleProject/Content/Input/Actions/: IA_Jump.uasset  IA_Look.uasset  IA_Move.uasset
ExampleProject/Content/Map/: ThirdPersonMap.umap
ExampleProject/Source/: ExampleProject.Target.cs  ExampleProjectEditor.Target.cs
ExampleProject/Source/ExampleProject/: ExampleProject.Build.cs  ExampleProject.cpp
ExampleProject/Source/ExampleProject/Character/: CNCharacterAnimInstance.cpp  CNCharacterAnimInstance.h  CNCharacterBase.cpp  CNCharacterBase.h  CNCharacterLocal.cpp  CNCharacterLocal.h  CNCharacterRemote.cpp  CNCharacterRemote.h
ExampleProject/Source/ExampleProject/Gameplay/: CNGameMode.cpp  CNGameMode.h
ExampleProject/Source/ExampleProject/Network/: ClientApp.cpp  ClientApp.h  ClientPacketHandler.cpp  ClientPacketHandler.h  ClientRPCHandler.cpp  ClientRPCHandler.h  LocalCharacter.cpp  LocalCharacter.h  RemoteCharacter.cpp  RemoteCharacter.h  RemoteCharactersStore.h
Source/Core/: CMakeLists.txt  Main.cpp  NetClient.cpp  NetClient.h  NetServer.cpp  NetServer.h  RakNetInterface.h  Serial.cpp  Serial.h
Source/Core/Serial/: DummySerial.cpp  DummySerial.h  SerialInterface.h
Source/Server/: CMakeLists.txt  CharacterFlow.cpp  CharacterFlow.h  Main.cpp  Main.h  ServerApp.cpp  ServerApp.h  ServerPacketHandler.cpp  ServerPacketHandler.h  ServerRPCHandler.cpp  ServerRPCHandler.h  StreamingFlow.h
Source/Shared/: BitStream.cpp  BitStream.h  Common.h  Linux.h  NetClientInterface.h  NetServerInterface.h  NetStats.h  NetTypes.h  Packet.h  PacketChannels.h  PacketHandler.cpp  PacketHandler.h  PacketIdentifiers.h  PacketPriorities.h  PacketReliabilities.h  PlayerSocket.cpp  PlayerSocket.h  RpcHandler.cpp  RpcHandler.h  RpcIdentifiers.h  SharedUtility.cpp  SharedUtility.h
Source/Shared/Containers/: DataStore.h  List.h  String.cpp  String.h
Source/Shared/Math/: Quaternion.h  Vector3.h
(+53 files in other folders)
