project(Core)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

file(GLOB_RECURSE CORE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE CORE_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

file(GLOB_RECURSE SHARED_SOURCES ${CMAKE_SOURCE_DIR}/Source/Shared/*.cpp)
file(GLOB_RECURSE SHARED_HEADERS ${CMAKE_SOURCE_DIR}/Source/Shared/*.h)

add_library(${PROJECT_NAME} STATIC ${CORE_SOURCES} ${CORE_HEADERS} ${SHARED_SOURCES} ${SHARED_HEADERS})

target_include_directories(${PROJECT_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/Source/Shared
    ${SLIKENET_DIR}/include
)

target_compile_definitions(${PROJECT_NAME} PUBLIC _WINSOCK_DEPRECATED_NO_WARNINGS _CRT_SECURE_NO_WARNINGS)

target_link_libraries(${PROJECT_NAME} slikenet)

set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}_${CMAKE_SYSTEM_PROCESSOR}_$<CONFIG>")

install(TARGETS ${PROJECT_NAME}
    ARCHIVE DESTINATION lib
)

install(DIRECTORY ${CMAKE_SOURCE_DIR}/Source/Shared/ DESTINATION include/UECustomNet
    FILES_MATCHING PATTERN "*.h"
)
